--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </ul>
     <div class="container story" id="our-story">
       <div class="img-container">
-        <img src="couple img 1.jpg" alt="couple image 1" />
+        <img src="img/couple img 1.jpg" alt="couple image 1" />
       </div>
       <div class="text-container">
         <h1>Our Love Story</h1>
@@ -95,13 +95,13 @@
         </div>
       </div>
       <div class="img-container">
-        <img src="wedding.jpeg" alt="couple image 2" />
+        <img src="img/wedding.jpeg" alt="couple image 2" />
       </div>
     </div>
 
     <div class="container ending" id="ending">
       <div class="img-container">
-        <img src="ending3.jpg" alt="ending">
+        <img src="img/ending3.jpg" alt="ending">
       </div>
       <div class="invite">
       <h1>We Can't Wait To Celebrate With You!</h1>
